--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "gulp-watch": "5.0.1",
         "gulp-zip": "5.0.2",
         "postcss": "^8.2.1",
+        "postcss-cssnext": "^3.1.0",
         "postcss-import": "^14.0.0"
     },
     "browserslist": [
