--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "cssnano": "4.1.10",
         "gscan": "3.5.4",
         "gulp": "4.0.2",
+        "gulp-less": "^4.0.1",
         "gulp-livereload": "4.0.2",
         "gulp-postcss": "^9.0.0",
         "gulp-sourcemaps": "2.6.5",
@@ -55,9 +56,8 @@
         "gulp-util": "3.0.8",
         "gulp-watch": "5.0.1",
         "gulp-zip": "5.0.2",
-        "postcss": "^8.2.1",
-        "postcss-cssnext": "^3.1.0",
-        "postcss-import": "^14.0.0"
+        "less": "^3.0.0",
+        "postcss": "^8.2.1"
     },
     "browserslist": [
         "defaults"
